Remove .sh from policy-server-monitor on servers
To make the process name appear as policy-server-monitor in the logs
remove '.sh' when installing on the server.

--- a/resources/policy-server-monitor.service
+++ b/resources/policy-server-monitor.service
@@ -4,4 +4,4 @@ ConditionPathExists=/opt/policy-server
 
 [Service]
 Type=oneshot
-ExecStart=/opt/policy-server/policy-server-monitor.sh
+ExecStart=/opt/policy-server/policy-server-monitor
